--- a/nextjs/youtube-2020-feb-nextjs/package.json
+++ b/nextjs/youtube-2020-feb-nextjs/package.json
@@ -9,6 +9,7 @@
     "mock-server": "json-server --watch ./db.json -p 4001 -d 3000"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.4.4",
     "react": "16.13.1",
