--- a/nextjs/youtube-2020-feb-nextjs/package.json
+++ b/nextjs/youtube-2020-feb-nextjs/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "bcrypt": "^5.0.0",
     "isomorphic-unfetch": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -18,6 +20,8 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
     "typescript": "^3.9.7"
