--- a/nextjs/youtube-2020-feb-nextjs/package.json
+++ b/nextjs/youtube-2020-feb-nextjs/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "bcrypt": "^5.0.0",
+    "cookie": "^0.4.1",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "next": "9.4.4",
@@ -21,9 +22,14 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie": "^0.4.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "2.0.5",
     "typescript": "^3.9.7"
   }
 }
