--- a/mern-stack/youtube-lecture/boiler-plate/package.json
+++ b/mern-stack/youtube-lecture/boiler-plate/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engine": {
+    "node": "12.17.0",
+    "npm": "7.5.4"
+  },
   "scripts": {
-    "start": "node index.js",
-    "backend": "nodemon index.js"
+    "start": "node server/index.js",
+    "backend": "nodemon server/index.js"
   },
   "keywords": [],
   "author": "jglee",
