--- a/mern-stack/youtube-lecture/boiler-plate/package.json
+++ b/mern-stack/youtube-lecture/boiler-plate/package.json
@@ -9,7 +9,9 @@
   },
   "scripts": {
     "start": "node server/index.js",
-    "backend": "nodemon server/index.js"
+    "backend": "nodemon server/index.js",
+    "frontend": "npm run start --prefix client",
+    "dev": "concurrently \"npm run backend\" \"npm run frontend\""
   },
   "keywords": [],
   "author": "jglee",
@@ -17,12 +19,15 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "concurrently": "^6.0.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.17"
+    "mongoose": "^5.11.17",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "http-proxy-middleware": "^1.0.6",
     "nodemon": "^2.0.7"
   }
 }
